--- a/esp32s3_usb_lcd_1.47/board.yml
+++ b/esp32s3_usb_lcd_1.47/board.yml
@@ -1,6 +1,11 @@
 board:
-  name: esp32s3_iot
-  full_name: ESP32-S3-IoT
-  vendor: espressif
+  name: esp32s3_luatos_core
+  full_name: ESP32S3-Luatos-Core
+  vendor: luatos
   socs:
   - name: esp32s3
+    variants:
+    - name: usb
+      cpucluster: procpu
+    - name: usb
+      cpucluster: appcpu
