--- a/esp32s3_usb_lcd_1.47/Kconfig
+++ b/esp32s3_usb_lcd_1.47/Kconfig
@@ -3,5 +3,5 @@
 
 config HEAP_MEM_POOL_ADD_SIZE_BOARD
 	int
-	default 4096 if BOARD_ESP32S3_DEVKITC_ESP32S3_PROCPU
-	default 256 if BOARD_ESP32S3_DEVKITC_ESP32S3_APPCPU
+	default 4096 if BOARD_ESP32S3_LUATOS_CORE_ESP32S3_PROCPU || BOARD_ESP32S3_LUATOS_CORE_ESP32S3_PROCPU_USB
+	default 256 if BOARD_ESP32S3_LUATOS_CORE_ESP32S3_APPCPU || BOARD_ESP32S3_LUATOS_CORE_ESP32S3_APPCPU_USB
