--- a/esp32s3_usb_lcd_1.47/esp32s3_lcd_1_47-pinctrl.dtsi
+++ b/esp32s3_usb_lcd_1.47/esp32s3_lcd_1_47-pinctrl.dtsi
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2024 Espressif Systems (Shanghai) Co., Ltd.
+ * Copyright (c) 2022 Espressif Systems (Shanghai) Co., Ltd.
  *
  * SPDX-License-Identifier: Apache-2.0
  */
@@ -21,15 +21,23 @@
 		};
 	};
 
-	uart1_default: uart1_default {
+	i2c0_default: i2c0_default {
 		group1 {
-			pinmux = <UART1_TX_GPIO17>;
+			pinmux = <I2C0_SDA_GPIO1>,
+				 <I2C0_SCL_GPIO2>;
+			bias-pull-up;
+			drive-open-drain;
 			output-high;
 		};
+	};
 
-		group2 {
-			pinmux = <UART1_RX_GPIO18>;
+	i2c1_default: i2c1_default {
+		group1 {
+			pinmux = <I2C1_SDA_GPIO4>,
+				 <I2C1_SCL_GPIO5>;
 			bias-pull-up;
+			drive-open-drain;
+			output-high;
 		};
 	};
 
@@ -59,4 +67,10 @@
 		};
 	};
 
+	twai_default: twai_default {
+		group1 {
+			pinmux = <TWAI_TX_GPIO5>,
+				 <TWAI_RX_GPIO6>;
+		};
+	};
 };
