--- a/boards/esp32s3_lcd_1.47/esp32s3_lcd_1_47_procpu.yaml
+++ b/boards/esp32s3_lcd_1.47/esp32s3_lcd_1_47_procpu.yaml
@@ -1,5 +1,5 @@
-identifier: esp32s3_luatos_core/esp32s3/procpu
-name: ESP32-S3 LuatOS Core PROCPU
+identifier: esp32s3_lcd_1_47/esp32s3/procpu
+name: ESP32-S3 LCD 1.47 PROCPU
 type: mcu
 arch: xtensa
 toolchain:
