--- a/boards/esp32s3_lcd_1.47/esp32s3_lcd_1_47.dtsi
+++ b/boards/esp32s3_lcd_1.47/esp32s3_lcd_1_47.dtsi
@@ -14,25 +14,25 @@
 		compatible = "gpio-leds";
 
 		led0: led0 {
-			gpios = <&gpio0 10 GPIO_ACTIVE_HIGH>;
+			gpios = <&gpio1 7 GPIO_ACTIVE_HIGH>;
 			label = "LEDA";
 		};
 
-		led1: led1 {
-			gpios = <&gpio0 11 GPIO_ACTIVE_HIGH>;
-			label = "LEDB";
-		};
+		// led1: led1 {
+		// 	gpios = <&gpio0 11 GPIO_ACTIVE_HIGH>;
+		// 	label = "LEDB";
+		// };
 	};
 
-	buttons {
-		compatible = "gpio-keys";
+	// buttons {
+	// 	compatible = "gpio-keys";
 
-		button0: button_0 {
-			gpios = <&gpio0 0 (GPIO_PULL_UP | GPIO_ACTIVE_LOW)>;
-			label = "BOOT Button";
-			zephyr,code = <INPUT_KEY_0>;
-		};
-	};
+	// 	button0: button_0 {
+	// 		gpios = <&gpio0 0 (GPIO_PULL_UP | GPIO_ACTIVE_LOW)>;
+	// 		label = "BOOT Button";
+	// 		zephyr,code = <INPUT_KEY_0>;
+	// 	};
+	// };
 };
 
 &uart0 {
